--- a/notebooks/PBMCs_tutorial.ipynb
+++ b/notebooks/PBMCs_tutorial.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "### About the bulk GRN\n",
     "\n",
-    "It contain three types of interactions (TF-RE-TG) : \n",
+    "It contains three types of interactions (TF-RE-TG) : \n",
     "- TF &rarr; RE : biding strength (&alpha;)\n",
     "- RE &rarr; TG : cis regulatory strength (&beta;)\n",
     "- TF &rarr; TG : trans regulatory strength (&gamma;)\n",
@@ -33,7 +33,10 @@
    "execution_count": 5,
    "id": "ea0e4a80-49c7-4c14-970b-e259179737f7",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -107,7 +110,10 @@
    "execution_count": 11,
    "id": "0748bf09-c8f8-412c-8ef0-5539db181785",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -3308,7 +3314,10 @@
    "execution_count": 14,
    "id": "112a5721-6e64-45da-aed5-62f39a078084",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -3635,7 +3644,10 @@
    "execution_count": 10,
    "id": "61ea121f",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -6776,7 +6788,10 @@
    "execution_count": 35,
    "id": "7f1aa2f0-9288-4211-84b9-623b79032c89",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -6817,7 +6832,10 @@
    "execution_count": 89,
    "id": "1abbe105",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -6838,7 +6856,10 @@
    "execution_count": 85,
    "id": "8a16a4f6-e089-4238-9282-ecc667ce51ba",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -6858,7 +6879,10 @@
    "execution_count": 86,
    "id": "2329ec8b-e2ba-4e02-8450-820335843f2a",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -7415,7 +7439,10 @@
    "execution_count": 125,
    "id": "dbf3f0d9-8d0a-4dba-ae8f-eb8433cf2daf",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -7565,7 +7592,10 @@
    "execution_count": 131,
    "id": "eb513ef2-844e-4187-a65d-045b4b79398b",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -7640,7 +7670,10 @@
    "execution_count": 139,
    "id": "4f0cfe1e-8f21-4eab-9aa2-34077daf6562",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -8680,7 +8713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
